<resources>
    <string name="app_name">WhatsApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_2">Item 2</string>
    <string name="settings">Settings</string>
    <string name="payments">Payments</string>
    <string name="starred_messages">Starred Messages</string>
    <string name="linked_devices">Linked Devices</string>
    <string name="new_broadcast">New Broadcast</string>
    <string name="new_group">New Group</string>
    <string name="search">Search</string>
    <string name="camera">Camera</string>
    <string name="enter_name_here">Enter Name Here</string>
    <string name="enter_phone_number_here">Enter Phone Number Here</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Checkout activity -->
    <string name="title_activity_checkout">CheckoutActivity</string>
    <string name="checkout_item_description">Description</string>
    <string name="googlepay_status_unavailable" translatable="false">Unfortunately, Google Pay is
        not available on this phone.
    </string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for
        %s!
    </string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="contacts">Contacts</string>
    <string name="refresh">Refresh</string>
    <string name="type_your_message">Type Your Message</string>
    <string name="video_call">Video Call</string>
    <string name="audio_call">Audio Call</string>

</resources>
